nextdate and temperature

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
                             <input class="form-control" type="date" name="fecha" required>
                         </div>
                     </div>
-
                     <br><br>
-
                     <div class="row-p2">
                         <div class="col col-6">
                             <label for="name">Selecciona el tipo de termometro</label>
@@ -39,6 +37,62 @@
 								<option>Digital de punzón</option>
 								<option>Analogo de punzón</option>
 							</select>  <br>
+                        </div>
+                    </div>
+                    <div class="row-p2">
+                        <div class="col col-6">
+                            <label for="name">Procedimiento</label>
+                            <select type="text" class="form-control" name="tipodetermometro" required>
+								<option>Verificación</option>
+								<option>Ajuste</option>
+							</select>  <br>
+                        </div>
+                    </div>
+                    <div class="row-p2">
+                        <div class="col col-6">
+                            <label for="name">Diferencia con el punto de congelación (0°C)</label>
+                            <select type="text" class="form-control" name="tipodetermometro" required>
+								<option>-4</option>
+								<option>-3</option>
+								<option>-2</option>
+								<option>-1</option>
+								<option>-0.9</option>
+								<option>-0.8</option>
+								<option>-0.7</option>
+								<option>-0.6</option>
+								<option>-0.5</option>
+								<option>-0.4</option>
+								<option>-0.3</option>
+								<option>-0.2</option>
+								<option>-0.1</option>
+								<option>0</option>
+								<option>0.1</option>
+								<option>0.2</option>
+								<option>0.3</option>
+								<option>0.4</option>
+								<option>0.5</option>
+								<option>0.6</option>
+								<option>0.7</option>
+								<option>0.8</option>
+								<option>0.9</option>
+								<option>1.0</option>
+								<option>1.1</option>
+								<option>1.2</option>
+								<option>1.3</option>
+								<option>1.4</option>
+								<option>1.5</option>
+								<option>1.6</option>
+								<option>1.7</option>
+								<option>1.8</option>
+								<option>1.9</option>
+								<option>2.0</option>
+							</select>  <br>
+                        </div>
+                    </div>
+                    <div class="row-p2">
+                        <div class="col col-6">
+                            <label for="name">Fecha de la próxima verificación</label>
+                            <input class="form-control" type="date" name="fechaproxiver" required>
                         </div>
                     </div>
                 </form>
