Cambio logo euro

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <center>
             <div>
-                <img src="imgs/logo2.png" width="300" height="200">
+                <img src="imgs/logo3.jpeg" width="300" height="200">
                 <h1>VERIFICACION Y AJUSTE DE TERMOMETROS</h1>
             </div>
         </center>
